# magic-terminal-helper

./: .gitignore  install.sh  pyproject.toml
magic_terminal/: cli.py  config.py  context.py  interactive.py  ollama_client.py  prompt_builder.py
