[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "magic-terminal"
version = "0.1.0"
description = "Natural language to zsh commands via Ollama"
requires-python = ">=3.11"
dependencies = [
  "ollama>=0.6.1",
  "prompt_toolkit>=3.0.52",
]

[project.scripts]
magic-run = "magic_terminal.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["magic_terminal*"]
